--- a/modules/stack-editor/stack_editor.html
+++ b/modules/stack-editor/stack_editor.html
@@ -339,11 +339,9 @@
         <div style="font-weight: 700; font-size: 14px;">FOSS Stack Hub</div>
       </div>
       
-      <div class="nav-menu" style="
+      <div class="nav-menu" data-standard-nav style="
         display: flex; gap: 8px; margin-left: auto; margin-right: auto;
-      ">
-        <!-- Wird automatisch von standard-navigation.js befüllt -->
-      </div>
+      "></div>
       
       <div style="display: flex; gap: 8px;">
         <button class="btn ghost" style="font-size: 12px; padding: 6px 8px;" data-route="/dashboard">← Zurück</button>
@@ -1035,6 +1033,5 @@
   
   <!-- Navigation Integration -->
   <script src="../../shared/js/navigation.js"></script>
-  <script src="../../shared/js/standard-navigation.js"></script>
 </body>
 </html>
